--- a/If_you_are_wrong_do_not_click_me/index.html
+++ b/If_you_are_wrong_do_not_click_me/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <script defer src="script.js"></script>
-    <title>If you'r wrong, Don't click me</title>
+    <script src="script.js"></script>
+    <title>If you're wrong, Don't click me</title>
 </head>
 <body>
-    <h1>If you'r wrong, Don't click me</h1>
+    <h1>If you're wrong, Don't click me</h1>
     <div role="main" class="main">
         <input type="text" name="passwd" placeholder="Insert the password" id="passwd" value="">
         <button id="btn">Click me</button>
